--- a/src/http/gui/app/templates/components/providers-accordion.hbs
+++ b/src/http/gui/app/templates/components/providers-accordion.hbs
@@ -1,4 +1,4 @@
-<div class="accordion providers-accordion">
+<div class="accordion secondary-accordion providers-accordion">
   {{#if noProviders}}
     <div class="sidebar-row space-add-text-row">
       {{t 'onezone.providersAccordion.noProviders'}}
