--- a/src/http/gui/app/templates/components/tokens-list-item.hbs
+++ b/src/http/gui/app/templates/components/tokens-list-item.hbs
@@ -1,9 +1,9 @@
 {{!-- TODO: this "emulates" accordion group like in spaces accordion item --}}
 {{!-- TODO: but this is not an accordion --}}
 {{!-- TODO: create other style class --}}
-<div class="accordion-group tokens-accordion-group">
-  <div class="accordion-heading tokens-accordion-heading">
-    <a class="accordion-toggle tokens-accordion-toggle">
+<div class="accordion-group secondary-accordion-group tokens-accordion-group">
+  <div class="accordion-heading secondary-accordion-heading tokens-accordion-heading">
+    <a class="accordion-toggle secondary-accordion-toggle tokens-accordion-toggle">
       <div class="token-icon">
           {{one-icon icon='menu-token'}}
       </div>
@@ -17,7 +17,7 @@
       </div>
       <div class="trash-button" {{action "remove"}}>
         <div class="remove-icon">
-          {{one-icon icon="trash"}}
+          {{one-icon icon="remove"}}
         </div>
       </div>
     </a>
