--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -1,17 +1,17 @@
-<div class="accordion spaces-accordion">
+<div class="accordion secondary-accordion spaces-accordion">
   {{#each spaces as |s|}}
     {{spaces-accordion-item space=s}}
   {{/each}}
 
   {{!-- faking the accordion group... this should be separate class --}}
-  <div class="accordion-group spaces-accordion-group">
-    <div class="accordion-heading spaces-accordion-heading">
-      <a class="accordion-toggle spaces-accordion-toggle create-new"
+  <div class="accordion-group secondary-accordion-group spaces-accordion-group">
+    <div class="accordion-heading secondary-accordion-heading spaces-accordion-heading">
+      <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle create-new"
         {{action 'startCreateNewSpace'}}>
-        <div class="space-icon">
+        <div class="secondary-icon space-icon">
           {{one-icon icon='space-add'}}
         </div>
-        <div class="space-header">
+        <div class="secondary-header space-header">
           {{#if createNewSpaceEditing}}
             {{input enter='endCreateNewSpace'}}
           {{else}}
