VFS-1768: Using *-home icons

--- a/src/http/gui/app/templates/components/providers-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/providers-accordion-item.hbs
@@ -15,6 +15,7 @@
           {{#if provider.isDefault}}
             {{one-icon icon="home"}}
           {{else}}
+            {{!-- class name is star-empty because of historical reasons... --}}
             <div class="star-empty">
               {{one-icon icon="home-outline"}}
             </div>
@@ -36,11 +37,7 @@
           {{#each provider.spaces as |s|}}
             <li>
               <div class="icon">
-                {{#if s.isDefault}}
-                  {{one-icon icon="space-default"}}
-                {{else}}
-                  {{one-icon icon="space"}}
-                {{/if}}
+                {{one-icon icon=(if s.isDefault "space-home" "space")}}
               </div>
               <div class="label">
                 {{s.name}}
