--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -3,11 +3,7 @@
     <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle">
       <div class="" data-toggle="collapse" href="#collapse-space-{{space.id}}">
         <div class="secondary-icon space-icon">
-          {{#if space.isDefault}}
-            {{one-icon icon='space-default'}}
-          {{else}}
-            {{one-icon icon='space'}}
-          {{/if}}
+          {{one-icon icon=(if space.isDefault "space-home" "space")}}
         </div>
         <div class="secondary-header space-header">
           {{space.name}}
@@ -15,10 +11,10 @@
       </div>
       <div class="star-toggle" {{action "toggleDefault"}}>
         {{#if space.isDefault}}
-          {{one-icon icon="star"}}
+          {{one-icon icon="home"}}
         {{else}}
           <div class="star-empty">
-            {{one-icon icon="star-empty"}}
+            {{one-icon icon="home-empty"}}
           </div>
         {{/if}}
       </div>
@@ -39,11 +35,7 @@
         {{#each space.providers as |p|}}
           <li>
             <div class="icon">
-              {{#if p.isDefault}}
-                {{one-icon icon="provider-default"}}
-              {{else}}
-                {{one-icon icon="provider"}}
-              {{/if}}
+              {{one-icon icon=(if p.isDefault "provider-home" "provider")}}
             </div>
             <div class="label">
               {{p.name}}
