VFS-1768: Fixin home-outline icon

--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -14,7 +14,7 @@
           {{one-icon icon="home"}}
         {{else}}
           <div class="star-empty">
-            {{one-icon icon="home-empty"}}
+            {{one-icon icon="home-outline"}}
           </div>
         {{/if}}
       </div>
