VFS-1768: Positioning provider icon on map dynamically

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -43,6 +43,7 @@ $icomoon-font-path: "fonts/oneicons";
 @import "index";
 @import "login";
 @import "onezone";
+@import "provider-place";
 
 html, body {
   height: 100%;
