VFS-1768: Providers drop draft

--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -44,6 +44,7 @@ $icomoon-font-path: "fonts/oneicons";
 @import "login";
 @import "onezone";
 @import "provider-place";
+@import "provider-place-drop";
 
 html, body {
   height: 100%;
