--- a/src/http/gui/app/templates/components/provider-place.hbs
+++ b/src/http/gui/app/templates/components/provider-place.hbs
@@ -1,5 +1,9 @@
-<div class="circle">
+<div class="circle" {{action "toggleActive"}}>
   <div class="provider-icon">
     {{one-icon icon="provider"}}
   </div>
 </div>
+
+{{#if isActive}}
+  {{provider-place-drop providerPlace=this}}
+{{/if}}
