--- a/src/http/gui/app/templates/onezone/index.hbs
+++ b/src/http/gui/app/templates/onezone/index.hbs
@@ -2,7 +2,7 @@
 
 {{#onezone-atlas as |atlas|}}
   {{#each model as |provider|}}
-    {{provider-place provider=provider atlas=atlas}}
+    {{provider-place provider=provider atlas=atlas selectProvider='selectProvider'}}
   {{/each}}
 {{/onezone-atlas}}
 
