--- a/src/http/gui/app/styles/provider-place.scss
+++ b/src/http/gui/app/styles/provider-place.scss
@@ -6,8 +6,8 @@ $provider-place-circle-border-size: 2px;
 
   &.working {
     .circle {
-      border-color: $color-green;
-      color: $color-green;
+      border-color: $color-pale-green;
+      color: $color-pale-green;
     }
   }
 
