--- a/src/http/gui/app/templates/home/index.hbs
+++ b/src/http/gui/app/templates/home/index.hbs
@@ -13,7 +13,7 @@
             </p>
           </div>
           <div class="row-get-started-button">
-            {{#link-to 'home.get-started' class="btn btn-index"}}
+            {{#link-to 'home.get-started' class="btn btn-large btn-index"}}
               {{t 'index.atlas.getStarted'}}
             {{/link-to}}
           </div>
