--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -197,13 +197,31 @@ html {
 
 // Buttons
 
-.btn-blue {
+.btn {
+  font-size: inherit !important;
+}
+
+.btn-large {
   padding: 15px 30px;
   text-transform: uppercase;
-  font-size: 0.7em;
+  font-size: 0.7em !important;
+}
+
+.btn-small {
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.btn-blue {
   color: white !important;
   border-color: transparent !important;
   background-color: $color-button;
+}
+
+.btn-pale-green {
+  color: white !important;
+  border-color: transparent !important;
+  background-color: $color-pale-green;
 }
 
 .btn-index {
