VFS-1768: Fixing bind floater on window scroll

--- a/src/http/gui/app/styles/provider-place-drop.scss
+++ b/src/http/gui/app/styles/provider-place-drop.scss
@@ -66,6 +66,7 @@ $provider-drop-radius: 4px;
 
       .status-circle {
         margin-top: 10px;
+        margin-right: 2px;
         float: right;
         border-radius: 50%;
         width: 8px;
