--- a/src/http/gui/app/templates/components/providers-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/providers-accordion-item.hbs
@@ -7,7 +7,7 @@
           <div class="secondary-icon provider-icon">
             {{one-icon icon=iconName color=iconColor}}
           </div>
-          <div class="secondary-header provider-header">
+          <div class="secondary-header provider-header stretch-hack">
             {{provider.name}}
           </div>
         </div>
