--- a/src/http/gui/app/templates/components/providers-accordion.hbs
+++ b/src/http/gui/app/templates/components/providers-accordion.hbs
@@ -8,7 +8,8 @@
       {{t 'onezone.providersAccordion.chooseProvider'}}
     </div>
 
-    <div class="sidebar-row">
+    {{!-- TODO: implement search --}}
+    {{!-- <div class="sidebar-row">
       <div class="input-group c-search">
         <input type="text" class="form-control" id="providers-list-search">
         <span class="input-group-btn">
@@ -18,7 +19,7 @@
           </button>
         </span>
       </div>
-    </div>
+    </div> --}}
 
     <!-- TODO: class list-group -->
     <div class="list-group" id="providers-list">
