--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -5,7 +5,7 @@
         <div class="secondary-icon space-icon">
           {{one-icon icon=(if space.isDefault "space-home" "space")}}
         </div>
-        <div class="secondary-header space-header">
+        <div class="secondary-header space-header stretch-hack">
           {{space.name}}
         </div>
       </div>
