--- a/src/http/gui/app/templates/components/tokens-list.hbs
+++ b/src/http/gui/app/templates/components/tokens-list.hbs
@@ -5,12 +5,12 @@
 
   <div class="accordion-group secondary-accordion-group tokens-accordion-group">
     <div class="accordion-heading secondary-accordion-heading tokens-accordion-heading">
-      <a class="onezone-sidebar-secondary-item secondary-accordion-toggle create-new"
+      <a class="onezone-sidebar-secondary-item accordion-toggle secondary-accordion-toggle create-new"
         {{action 'createNewToken'}}>
         <div class="token-icon">
           {{one-icon icon='add'}}
         </div>
-        <div class="token-header">
+        <div class="token-header stretch-hack">
           {{t 'onezone.tokensAccordion.createNewToken'}}
         </div>
       </a>
