--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -11,7 +11,7 @@
         <div class="secondary-icon space-icon">
           {{one-icon icon='space-add'}}
         </div>
-        <div class="secondary-header space-header">
+        <div class="secondary-header space-header stretch-hack">
           {{#if createNewSpaceEditing}}
             {{input enter='endCreateNewSpace'}}
           {{else}}
@@ -26,9 +26,10 @@
     {{t 'onezone.spacesAccordion.createNewSpaceText'}}
   </div>
 
-  <div class="sidebar-row space-add-read-more-row">
-    {{#bs-button type="blue"}}
+  {{!-- TODO: read more button --}}
+  {{!-- <div class="sidebar-row space-add-read-more-row">
+    <a href="#" class="btn btn-large btn-blue">
       {{t 'onezone.spacesAccordion.readMore'}}
-    {{/bs-button}}
-  </div>
+    </a>
+  </div> --}}
 </div>
