--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -1,7 +1,7 @@
 <div class="accordion-group secondary-accordion-group spaces-accordion-group">
   <div class="accordion-heading secondary-accordion-heading spaces-accordion-heading">
     <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle">
-      <div class="" data-toggle="collapse" href="#collapse-space-{{space.id}}">
+      <div class="mouse-pointer" data-toggle="collapse" href="#collapse-space-{{space.id}}">
         <div class="secondary-icon space-icon">
           {{one-icon icon=(if space.isDefault "space-home" "space")}}
         </div>
