--- a/src/http/gui/app/templates/components/spaces-accordion.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion.hbs
@@ -6,7 +6,7 @@
   {{!-- faking the accordion group... this should be separate class --}}
   <div class="accordion-group secondary-accordion-group spaces-accordion-group">
     <div class="accordion-heading secondary-accordion-heading spaces-accordion-heading">
-      <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle create-new"
+      <a class="accordion-toggle secondary-accordion-toggle spaces-accordion-toggle create-new mouse-pointer"
         {{action 'startCreateNewSpace'}}>
         <div class="secondary-icon space-icon">
           {{one-icon icon='space-add'}}
