--- a/src/http/gui/app/templates/components/tokens-list-item.hbs
+++ b/src/http/gui/app/templates/components/tokens-list-item.hbs
@@ -4,7 +4,7 @@
 <div class="accordion-group secondary-accordion-group tokens-accordion-group">
   <div class="accordion-heading secondary-accordion-heading tokens-accordion-heading">
     <a class="accordion-toggle secondary-accordion-toggle tokens-accordion-toggle hover-parent">
-      <div class="token-icon">
+      <div class="token-icon secondary-icon">
           {{one-icon icon='menu-token'}}
       </div>
       <div class="token-header stretch-hack">
