--- a/src/http/gui/app/templates/components/tokens-list.hbs
+++ b/src/http/gui/app/templates/components/tokens-list.hbs
@@ -5,9 +5,9 @@
 
   <div class="accordion-group secondary-accordion-group tokens-accordion-group">
     <div class="accordion-heading secondary-accordion-heading tokens-accordion-heading">
-      <a class="onezone-sidebar-secondary-item accordion-toggle secondary-accordion-toggle create-new"
+      <a class="onezone-sidebar-secondary-item accordion-toggle secondary-accordion-toggle create-new mouse-pointer"
         {{action 'createNewToken'}}>
-        <div class="token-icon">
+        <div class="add-item-icon token-icon">
           {{one-icon icon='add'}}
         </div>
         <div class="token-header stretch-hack">
