VFS-1768: Deselect places on click on back

--- a/src/http/gui/app/templates/components/provider-place.hbs
+++ b/src/http/gui/app/templates/components/provider-place.hbs
@@ -1,4 +1,4 @@
-<div class="circle" {{action "toggleActive"}}>
+<div class="circle" {{action "toggleActive" bubbles=false }}>
   <div class="provider-icon">
     {{one-icon icon="provider"}}
   </div>
