--- a/src/http/gui/app/styles/app.scss
+++ b/src/http/gui/app/styles/app.scss
@@ -227,7 +227,7 @@ html {
 .btn-index {
   padding: 25px 55px;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 1em !important;
   letter-spacing: 0.15em;
   color: white !important;
   border-color: transparent !important;
