--- a/src/http/gui/app/templates/home/login.hbs
+++ b/src/http/gui/app/templates/home/login.hbs
@@ -1,3 +1,30 @@
+{{!-- TODO: i18n? --}}
+<div class="container">
+  <div class="row row-centered">
+    <div class="col-xs-7 col-centered zone">
+      <div class="row">
+        <div class="col-sm-12 col-md-4 zone-image">
+          <div class="logo">
+            one world
+          </div>
+          <div class="isolated">
+            isolated
+          </div>
+        </div>
+        <div class="hidden-sm col-md-2 zone-arrow"></div>
+        <div class="col-sm-12 col-md-6 zone-label">
+          <div class="zone-zone">
+            zone
+          </div>
+          <div class="zone-company-name">
+            company name
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container login-box-container">
   <div class="row row-centered">
     <div class="col-xs-9 col-centered login-box">
