--- a/src/http/gui/app/styles/login.scss
+++ b/src/http/gui/app/styles/login.scss
@@ -65,7 +65,7 @@
   background: transparent;
   margin-top: 10px;
   margin-bottom: 30px;
-  font-family: 'Myriad Pro Semibold', 'Open Sans', sans-serif;
+  font-family: 'Myriad Pro Bold', 'Open Sans', sans-serif;
 
   .zone-image {
     height: 170px;
@@ -77,7 +77,7 @@
     text-align: center;
     padding-top: 40px;
     font-weight: bold;
-    font-size: 18pt;
+    font-size: 20pt;
 
     line-height: 125%;
 
@@ -93,7 +93,10 @@
     }
 
     .isolated {
-      font-size: 0.9em
+      // pull up
+      margin-top: -3px;
+      font-family: 'Myriad Pro Semibold', 'Open Sans', sans-serif;
+      font-size: 0.8em
     }
   }
   .zone-arrow {
