--- a/src/http/gui/app/templates/home/login.hbs
+++ b/src/http/gui/app/templates/home/login.hbs
@@ -11,7 +11,7 @@
             isolated
           </div>
         </div>
-        <div class="hidden-sm col-md-2 zone-arrow"></div>
+        <div class="hidden-xs hidden-sm col-md-2 zone-arrow"></div>
         <div class="col-sm-12 col-md-6 zone-label">
           <div class="zone-zone">
             zone
