VFS-1768: Fix for login page for large screens

--- a/src/http/gui/app/templates/home/login.hbs
+++ b/src/http/gui/app/templates/home/login.hbs
@@ -1,7 +1,7 @@
 {{!-- TODO: i18n? --}}
 <div class="container">
   <div class="row row-centered">
-    <div class="col-xs-7 col-centered zone">
+    <div class="col-xs-12 col-md-7 col-lg-5 col-centered zone">
       <div class="row">
         <div class="col-sm-12 col-md-4 zone-image">
           <div class="logo">
