VFS-1770 add RPC call for zone name

--- a/src/http/gui/app/templates/home/login.hbs
+++ b/src/http/gui/app/templates/home/login.hbs
@@ -17,7 +17,7 @@
             zone
           </div>
           <div class="zone-company-name">
-            company name
+            {{zoneName}}
           </div>
         </div>
       </div>
