VFS-1768: Zone name fetch from server

--- a/src/http/gui/app/templates/home/login.hbs
+++ b/src/http/gui/app/templates/home/login.hbs
@@ -17,7 +17,11 @@
             zone
           </div>
           <div class="zone-company-name">
-            {{zoneName}}
+            {{#if model.zoneName}}
+              {{model.zoneName}}
+            {{else}}
+              {{t 'login.unknownZoneName'}}
+            {{/if}}
           </div>
         </div>
       </div>
