--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -6,7 +6,7 @@
           {{one-icon icon=(if space.isDefault "space-home" "space")}}
         </div>
         <div class="secondary-header space-header stretch-hack">
-          {{space.name}}
+          {{trim-string space.name 24}}
         </div>
       </div>
       <div class="star-toggle" {{action "toggleDefault"}}>
@@ -38,7 +38,7 @@
               {{one-icon icon=(if p.isDefault "provider-home" "provider")}}
             </div>
             <div class="label">
-              {{p.name}}
+              {{trim-string p.name 24}}
             </div>
           </li>
         {{/each}}
@@ -57,9 +57,15 @@
               </div>
             </a>
             <div class="dropdown-menu dropdown-menu-right token-popup floater">
-              {{!-- TODO: style and copy button --}}
+              {{!-- TODO: style/design --}}
               {{!-- TODO: loading icon --}}
-              {{input value=supportToken readonly=true}}
+              <div class="input-with-button">
+                {{input id=(concat "support-token-" space.id) value=supportToken readonly=true}}
+                {{#copy-button success='copySuccess' error='copyError'
+                    clipboardTarget=(concat "#support-token-" space.id) class="btn btn-primary btn-right"}}
+                  {{one-icon icon='copy'}}
+                {{/copy-button}}
+              </div>
             </div>
           </div>
         </li>
