--- a/src/http/gui/app/templates/components/onezone-sidebar.hbs
+++ b/src/http/gui/app/templates/components/onezone-sidebar.hbs
@@ -74,5 +74,21 @@
                 </div>
             </div>
         </div>
+        <div class="accordion-group main-accordion-group">
+            <div class="accordion-heading main-accordion-heading">
+                <a class="accordion-toggle main-accordion-toggle"
+                   data-toggle="collapse" href="#collapse-alias">
+                    <h1>{{t 'onezone.sidebar.aliasHead'}}</h1>
+                    <div class="arrow-down"></div>
+                </a>
+            </div>
+            <!-- TODO collapse in -->
+            <div id="collapse-alias"
+                 class="accordion-body main-accordion-body collapse">
+                <div class="accordion-inner">
+                  {{alias-panel}}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
