--- a/src/http/gui/app/templates/components/provider-place-drop.hbs
+++ b/src/http/gui/app/templates/components/provider-place-drop.hbs
@@ -1,7 +1,7 @@
 <div class="drop-panel">
   <div class="drop-title-bar">
     <div class="title-label">
-      {{t (if provider.isWorking "onezone.providerPlaceDrop.operable" "onezone.providerPlaceDrop.operable")}}
+      {{t (if provider.isWorking "onezone.providerPlaceDrop.operable" "onezone.providerPlaceDrop.inoperable")}}
     </div>
     <div class="status-circle"></div>
   </div>
@@ -29,9 +29,11 @@
         </li>
       {{/each}}
     </ul>
-    <hr>
-    <a href="#" class="btn btn-small btn-pale-green" {{action 'goToFiles'}}>
-      {{t "onezone.providerPlaceDrop.goToFiles"}}
-    </a>
+    {{#if provider.isWorking}}
+      <hr>
+      <a href="#" class="btn btn-small btn-pale-green" {{action 'goToFiles'}}>
+        {{t "onezone.providerPlaceDrop.goToFiles"}}
+      </a>
+    {{/if}}
   </div>
 </div>
