VFS-1768: Select js in client tokes

--- a/src/http/gui/app/styles/provider-place-drop.scss
+++ b/src/http/gui/app/styles/provider-place-drop.scss
@@ -14,6 +14,7 @@ $provider-drop-radius: 4px;
   &.drop-right {
     &:after {
       position: absolute;
+      // TODO: optional triangle centered (top: 50%)
       top: 50%;
       left: -$provider-drop-triangle-height*2 + 1;
       border-bottom: $provider-drop-triangle-width solid transparent;
@@ -28,6 +29,7 @@ $provider-drop-radius: 4px;
   &.drop-left {
     &:after {
       position: absolute;
+      // TODO: optional triangle centered (top: 50%)
       top: 50%;
       right: -$provider-drop-triangle-height*2 + 1;
       border-bottom: $provider-drop-triangle-width solid transparent;
