VFS-1768: Spinners in login boxes

--- a/src/http/gui/app/styles/login.scss
+++ b/src/http/gui/app/styles/login.scss
@@ -1,4 +1,28 @@
-// TODO: create icons-font
+.glyphicon-refresh-animate {
+    -animation: spin 2s infinite linear;
+    -webkit-animation: spin2 2s infinite linear;
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
+
+.loader {
+  display: none;
+}
+
+.active {
+  .loader {
+    display: block;
+  }
+}
+
 
 .login-icon-box {
   display: inline-block;
@@ -12,6 +36,23 @@
   color: white !important;
   text-decoration: none !important;
   cursor: pointer; cursor: hand;
+
+  .loader {
+    // position hack
+    position: absolute;
+    top: 23px;
+    left: 30px;
+    font-size: 40px;
+    max-width: 40px;
+    width: 40px;
+    color: rgba(white, 0.5);
+  }
+
+  &.active {
+    .one-icon {
+      color: transparent !important;
+    }
+  }
 
   .one-icon {
     line-height: inherit;
