VFS-1768: Provider drop alway on top of provider place

--- a/src/http/gui/app/styles/provider-place-drop.scss
+++ b/src/http/gui/app/styles/provider-place-drop.scss
@@ -4,6 +4,7 @@ $provider-drop-radius: 4px;
 
 .provider-place-drop {
   position: fixed;
+  z-index: 1001 !important;
 
   &.working {
     .drop-panel .drop-title-bar .status-circle {
