VFS-1768: Select provider from spaces accordion

--- a/src/http/gui/app/templates/components/spaces-accordion-item.hbs
+++ b/src/http/gui/app/templates/components/spaces-accordion-item.hbs
@@ -33,7 +33,7 @@
     <div class="accordion-inner">
       <ul>
         {{#each space.providers as |p|}}
-          <li>
+          <li {{action "goToProvider" p}}>
             <div class="icon">
               {{one-icon icon=(if p.isDefault "provider-home" "provider")}}
             </div>
