VFS-1768: Components and models comments and copyrights; some clean up

--- a/src/http/gui/app/templates/components/provider-place-drop.hbs
+++ b/src/http/gui/app/templates/components/provider-place-drop.hbs
@@ -9,7 +9,7 @@
     <div class="provider-label">
       {{trim-string provider.name 20}}
     </div>
-    {{!-- TODO: location name --}}
+    {{!-- TODO: location name - get it from Google Maps API --}}
     {{!-- <div class="provider-location">
       {{provider.location}}
     </div> --}}
